--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
@@ -117,6 +117,7 @@
                                                             settings.Properties.EditFormat = EditFormat.Custom;
                                                             settings.Theme = "Moderno";
                                                             settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
+                                                            settings.Properties.CalendarProperties.DayStyle.Paddings.Padding = 0;
                                                             settings.Properties.EditFormatString = "dd/MM/yyyy hh:mm tt";
                                                             settings.Properties.TimeSectionProperties.Visible = true;
                                                             settings.Properties.TimeSectionProperties.Adaptive = true;
