cjal-15/01/2019- avance ajustes calendarios DevExpress

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/DevExpressCss.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Resources/css/DevExpressCss.css
@@ -103,6 +103,9 @@ div.dxeCalendarDETS.dxeCalendarVerticalDETS .dxeICC > div {
 .dxeCalendarFooter_Material {
     padding: 3px 0;
 }
+/*div.dxeCalendarDETS > div {
+    width: 100%;
+}*/
 /*.dxeButtonEditSys .dxeButton,*/
 /*input[type="text"].dxeEditAreaSys
  { 
