--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model  List<MVC.Presentacion.Models.Cobranza.CargosModel>
 @Html.DevExpress().GetStyleSheets(
-            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Moderno" },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Moderno" },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Moderno" }
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
         )
 @Html.DevExpress().GetScripts(
             new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
@@ -80,17 +80,16 @@
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
-                                      {
-                                          settings.Name = "FechaRango1";
-                                          settings.Properties.UseMaskBehavior = true;
-                                          settings.Properties.EditFormat = EditFormat.Custom;
-                                          settings.Theme = "Moderno";
-                                          settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
-                                          settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                          settings.Attributes.Clear();
-                                          settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                          settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                      }).GetHtml()
+                                       {
+                                           settings.Name = "FechaRango1";
+                                           settings.Properties.UseMaskBehavior = true;
+                                           settings.Properties.EditFormat = EditFormat.Custom;
+                                           settings.Theme = "Material";
+                                           settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                           settings.Attributes.Clear();
+                                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                           settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
+                                       }).Bind(Model[0].FechaRango1).GetHtml()
                                         </div>
                                         <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
@@ -98,17 +97,16 @@
                                            settings.Name = "FechaRango2";
                                            settings.Properties.UseMaskBehavior = true;
                                            settings.Properties.EditFormat = EditFormat.Custom;
-                                           settings.Theme = "Moderno";
-                                           settings.Properties.CalendarProperties.Style.CssClass = "CalendarWidthClass";
+                                           settings.Theme = "Material";
                                            settings.Properties.EditFormatString = "dd/MM/yyyy";
                                            settings.Attributes.Clear();
                                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(80);
                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
-                                       }).GetHtml()
+                                       }).Bind(Model[0].FechaRango2).GetHtml()
                                         </div>
                                         <div class="col-sm-3">
                                             <b>RFC:</b>
-                                            <input type="text" name="Rfc" class="form-control" placeholder="RFC del cliente"/>
+                                            <input type="text" name="Rfc" class="form-control" placeholder="RFC del cliente" />
                                         </div>
                                         <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
@@ -144,6 +142,6 @@
                 </div>
             </div>
         </section>
-    }    
+    }
 </body>
 </html>
