--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/AltaClienteDireccion.cshtml
@@ -1,4 +1,14 @@
 ﻿@using MVC.Presentacion.Models.Catalogos
+@Html.DevExpress().GetStyleSheets(
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
+        )
+@Html.DevExpress().GetScripts(
+            new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+            new Script { ExtensionSuite = ExtensionSuite.Editors },
+            new Script { ExtensionSuite = ExtensionSuite.GridView }
+        )
 @model List<ClienteLocacionMod>
 @{
     ViewBag.Title = "Catálogo / Clientes";
@@ -14,7 +24,41 @@
     if (message != '') {
         $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
     }
+    function OnSelectedChangeCountry(s, e) {
+        debugger
+        var value = s.GetValue();
+        if (value == 1)//Mexico
+        {           
+            $('#txtEdoP').hide();
+            $('#IdEstadoRep').show();
+        }
+        if (value == 2)//EU
+        {
+            $('#IdEstadoRep').hide();
+            $('#txtEdoP').show();
+        }
+    }
+    function OnSelectedChangeCountry2(s, e) {
+        debugger
+        var value = s.GetValue();
+        if (value == 1)//Mexico
+        {
+            $('#txtEdoP').hide();
+            $('#IdEstadoRep').show();
+        }
+        if (value == 2)//EU
+        {
+            $('#IdEstadoRep').hide();
+            $('#txtEdoP').show();
+        }
+    }
 </script>
+<style type="text/css">
+    .hid {
+        display: none;
+    }
+</style>
+
 @using (Html.BeginForm("GuardarLocaciones", "Pedidos", FormMethod.Post))
 {
     <section class="content home">
@@ -45,7 +89,9 @@
                                                     @if (Model.Count > 0)
                                                     {
                                                         <input type="text" name="IdCliente" hidden="hidden" value="@((ViewBag.Locaciones!=null)?ViewBag.Locaciones.IdCliente:Model[0].IdCliente)" />
-                                                    } <input type="text" name="Orden" hidden="hidden" value="@((ViewBag.Locaciones!=null)?ViewBag.Locaciones.Orden:0)" />
+                                                    } 
+                                                    @*<input type="text" name="Orden" hidden="hidden" value="@((ViewBag.Locaciones!=null)?ViewBag.Locaciones.Orden:0)" />*@
+                                                    <input type="text" name="Orden" hidden="hidden" value="@Model.Count" />
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="input-group">
@@ -69,14 +115,6 @@
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
                                             <input type="text" name="TipoLocacion" class="form-control" placeholder="Sucursal/Oficina/Tienda/Vacío/etc." value="@((ViewBag.Locaciones!=null)? @ViewBag.Locaciones.TipoLocacion:"")">
-                                            @*@if (ViewBag.EsEdicion == null)
-                                                {
-                                                    <input type="text" name="TipoLocacion" class="form-control" placeholder="Sucursal/Oficina/Tienda/Vacío/etc." value="@ViewBag.Locaciones.TipoLocacion">
-                                                }
-                                                else
-                                                {
-                                                    @Html.TextBoxFor(m => m[0].TipoLocacion, new { @class = "form-control", @placeholder = "Sucursal/Oficina/Tienda/Vacío/etc." })
-                                                }*@
                                         </div>
                                     </div>
                                     <div class="col-lg-7 col-md-7 col-sm-7">
@@ -112,30 +150,71 @@
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-3">
                                             <div class="form-group">
-                                                <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
-                                                    @if (ViewBag.Locaciones == null)
-                                                    {
-                                                        foreach (var lst in ViewBag.ListaPaises)
+                                                @*<select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
+                                                        @if (ViewBag.Locaciones == null)
                                                         {
-                                                            <option value="@lst.IdPais">@lst.Pais</option>
-                                                        }
-                                                    }
-                                                    else
-                                                    {
-                                                        foreach (var lst in ViewBag.ListaPaises)
-                                                        {
-
-                                                            if (lst.IdPais == ViewBag.Locaciones.IdPais)
-                                                            {
-                                                                <option value="@lst.IdPais" selected>@lst.Pais</option>
-                                                            }
-                                                            else
+                                                            foreach (var lst in ViewBag.ListaPaises)
                                                             {
                                                                 <option value="@lst.IdPais">@lst.Pais</option>
                                                             }
                                                         }
+                                                        else
+                                                        {
+                                                            foreach (var lst in ViewBag.ListaPaises)
+                                                            {
+                                                                if (lst.IdPais == ViewBag.Locaciones.IdPais)
+                                                                {
+                                                                    <option value="@lst.IdPais" selected>@lst.Pais</option>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <option value="@lst.IdPais">@lst.Pais</option>
+                                                                }
+                                                            }
+                                                        }
+                                                    </select>*@
+                                                @if (ViewBag.Locaciones == null)
+                                                {
+                                                    @Html.DevExpress().ComboBox(settings =>
+                                               {
+                                                   settings.Name = "IdPais";
+                                                   settings.Width = 180;
+                                                   settings.SelectedIndex = 0;
+                                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                   settings.Theme = "Material";
+                                                   settings.Properties.TextField = "Pais";
+                                                   settings.Properties.ValueField = "IdPais";
+                                                   settings.Properties.ValueType = typeof(int);
+                                                   settings.ClientEnabled = true;
+                                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                               }).BindList(ViewBag.ListaPaises).GetHtml()
+                                                }
+                                                else
+                                                {
+                                                    foreach (var lst in ViewBag.ListaPaises)
+                                                    {
+
+                                                        if (lst.IdPais == ViewBag.Locaciones.IdPais)
+                                                        {
+                                                            @*<option value="@lst.IdPais" selected>@lst.Pais</option>*@
+                                                            @Html.DevExpress().ComboBox(settings =>
+                                                       {
+                                                           settings.Name = "IdPais2";
+                                                           settings.Width = 180;
+                                                           settings.SelectedIndex = @lst.IdPais;
+                                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                           settings.Theme = "Material";
+                                                           settings.Properties.TextField = "Pais";
+                                                           settings.Properties.ValueField = "IdPais";
+                                                           settings.ClientEnabled = true;
+                                                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry2";
+                                                       }).BindList(ViewBag.ListaPaises).GetHtml()
+                                                        }                                                     
                                                     }
-                                                </select>
+                                                }
+
                                             </div>
                                         </div>
                                         <div class="col-lg-1 col-md-1 col-sm-1">
@@ -149,30 +228,67 @@
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-3">
                                             <div class="form-group">
-                                                <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
-                                                    @if (ViewBag.Locaciones == null)
-                                                    {
-                                                        foreach (var lst in ViewBag.ListaEstados)
+                                                @*<select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
+                                                        @if (ViewBag.Locaciones == null)
                                                         {
-                                                            <option value="@lst.IdEstadoRep">@lst.Estado</option>
-                                                        }
-                                                    }
-                                                    else
-                                                    {
-                                                        foreach (var lst in ViewBag.ListaEstados)
-                                                        {
-                                                            if (lst.IdEstadoRep == ViewBag.Locaciones.IdEstadoRep)
-                                                            {
-                                                                <option value="@lst.IdEstadoRep" selected>@lst.Estado</option>
-                                                            }
-                                                            else
+                                                            foreach (var lst in ViewBag.ListaEstados)
                                                             {
                                                                 <option value="@lst.IdEstadoRep">@lst.Estado</option>
                                                             }
+                                                        }
+                                                        else
+                                                        {
+                                                            foreach (var lst in ViewBag.ListaEstados)
+                                                            {
+                                                                if (lst.IdEstadoRep == ViewBag.Locaciones.ListaEstados)
+                                                                {
+                                                                    <option value="@lst.IdEstadoRep" selected>@lst.Estado</option>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <option value="@lst.IdEstadoRep">@lst.Estado</option>
+                                                                }
+                                                            }
+                                                        }
+                                                    </select>*@
+                                                @*@Html.TextBoxFor(m => m[0].EstadoProvincia, new { @id = "txtEdoP", @class = "form-control hid", @placeholder = "Estado" })*@
+                                                <input type="text" name="EstadoProvincia" id ="txtEdoP" class="form-control hid" placeholder = "Estado"/>
 
+                                                @if (ViewBag.Locaciones == null)
+                                                {
+                                                    @Html.DevExpress().ComboBox(settings =>
+                                               {
+                                                   settings.Name = "IdEstadoRep";
+                                                   settings.Width = 180;
+                                                   settings.SelectedIndex = 0;
+                                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                   settings.Theme = "Material";
+                                                   settings.Properties.TextField = "Estado";
+                                                   settings.Properties.ValueField = "IdEstadoRep";
+                                               }).BindList(ViewBag.ListaEstados).GetHtml()
+                                                }
+                                                else
+                                                {
+                                                    foreach (var lst in ViewBag.ListaEstados)
+                                                    {
+
+                                                        if (lst.IdEstadoRep == ViewBag.Locaciones.IdEstadoRep)
+                                                        {
+                                                            @Html.DevExpress().ComboBox(settings =>
+                                               {
+                                                   settings.Name = "IdEstadoRep2";
+                                                   settings.Width = 180;
+                                                   settings.SelectedIndex = @lst.IdEstadoRep;
+                                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                   settings.Theme = "Material";
+                                                   settings.Properties.TextField = "Estado";
+                                                   settings.Properties.ValueField = "IdEstadoRep";
+                                               }).BindList(ViewBag.ListaEstados).GetHtml()
                                                         }
                                                     }
-                                                </select>
+                                                }
                                             </div>
                                         </div>
                                         <div class="col-lg-1 col-md-1 col-sm-1">
@@ -421,7 +537,7 @@
                                                                         <i class="material-icons">edit</i>
                                                                         <span>Editar locacion</span>
                                                                     </a>
-                                                                    <a href="@Url.Action("BorrarClienteLoc", "Clientes", new { id = item.IdCliente , idOrden = item.Orden })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <a href="@Url.Action("BorrarClienteLoc", "Pedidos", new { id = item.IdCliente , idOrden = item.Orden })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">delete</i>
                                                                         <span>Eliminar locacion</span>
                                                                     </a>
